feat: update routes and services
